--- a/app/src/main/res/layout/fragment_leagues.xml
+++ b/app/src/main/res/layout/fragment_leagues.xml
@@ -2,13 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/leagueList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:listitem="@layout/list_item_fixture"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         />
 
     <ProgressBar android:id="@+id/progressBar"
